--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@ html {
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url('patas_fundo.jpg');
+    background-image: url('imagens/patas_fundo.jpg');
     background-position: top left;
     background-repeat: repeat;
     background-size: 250px; 
